WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95029
[BlackBerry] cookie database thread is leaking a pthread_attr
https://bugs.webkit.org/show_bug.cgi?id=95029
Summary
[BlackBerry] cookie database thread is leaking a pthread_attr
Joe Mason
Reported
2012-08-26 01:38:58 PDT
CookieDatabaseBackingStore creates a pthread_attr with pthread_attr_init but does not delete it with pthread_attr_destroy.
Attachments
fix
(2.33 KB, patch)
2012-08-26 02:17 PDT
,
Joe Mason
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joe Mason
Comment 1
2012-08-26 02:17:30 PDT
Created
attachment 160597
[details]
fix
Rob Buis
Comment 2
2012-08-26 04:49:18 PDT
Comment on
attachment 160597
[details]
fix View in context:
https://bugs.webkit.org/attachment.cgi?id=160597&action=review
LGTM.
> Source/WebCore/platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.cpp:68 > + createThread("cookie_database", pthread_attr_default);
Should we have a default param value for this so we don't even need to specify?
WebKit Review Bot
Comment 3
2012-08-26 04:59:58 PDT
Comment on
attachment 160597
[details]
fix Clearing flags on attachment: 160597 Committed
r126703
: <
http://trac.webkit.org/changeset/126703
>
WebKit Review Bot
Comment 4
2012-08-26 05:00:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug