[BlackBerry] Stop leaking a pthread_attr in CookieDatabaseBackingStore https://bugs.webkit.org/show_bug.cgi?id=95029

Patch by Joe Mason <jmason@rim.com> on 2012-08-26
Reviewed by Rob Buis.

No new tests (no behaviour change)
RIM PR 198519

* platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.cpp:
(WebCore::CookieDatabaseBackingStore::CookieDatabaseBackingStore): use pthread_attr_default
instead of pthread_attr_init

Canonical link: https://commits.webkit.org/112885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126703 268f45cc-cd09-0410-ab3c-d52691b4dbfc